--- a/src/meals/templates/meals/meal_list.html
+++ b/src/meals/templates/meals/meal_list.html
@@ -1,5 +1,5 @@
 <h1>Meals List</h1>
 
 {% for meal in meal_list %}
-    <h2><a href="#">{{ meal }}</a></h2>
+    <h2><a href="{% url 'meals:meal_detail' meal.slug %}">{{ meal }}</a></h2>  <!-- 'meals:meal_detail' - meals comes from namespace='meals' into urls.py -->
 {% endfor %}
