--- a/src/meals/templates/meals/meal_detail.html
+++ b/src/meals/templates/meals/meal_detail.html
@@ -1,9 +1,20 @@
-<h1>Meal Detail</h1>
+{% extends 'base.html' %}
 
-<h2>{{ meal_detail }}</h2>
+{% block content %}      
+  <!-- Meal Details Start -->
+    <div class="section">
+        <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8" data-aos="fade-up">
 
-<h3>{{ meal_detail.description }}</h3>
-<h3>{{ meal_detail.people }}</h3>
-<h3>{{ meal_detail.preparation_time }}</h3>
-<h3>{{ meal_detail.price }}</h3>
-<img src="{{ meal_detail.image.url }}" alt="{{meal_detail.name}}">
+            <h2 class="mb-5 text-center">Menu List with Price</h2>
+            <img src="{{ meal_detail.image.url }}" alt="{{ meal_detail.name }}">
+            <h2>{{ meal_detail }}</h2>
+            <p>{{ meal_detail.description }}</p>
+
+            </div>
+        </div>
+        </div>
+    </div>    
+  <!-- Meal Details End -->
+{% endblock %}
