--- a/src/meals/templates/meals/meal_detail.html
+++ b/src/meals/templates/meals/meal_detail.html
@@ -1,23 +1,40 @@
 {% extends 'base.html' %}
 
-{% block content %}      
-  <!-- Meal Details Start -->
-    <div class="section">
-        <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8" data-aos="fade-up">
+{% load static %}
 
-            <img src="{{ meal_detail.image.url }}" alt="{{ meal_detail.name }}" style="width: 100%; margin-left: auto; margin-right: auto; display: block;">
-            <h2 class="my-4">{{ meal_detail }}</h2>
-            <p>{{ meal_detail.description }}</p>
+{% block content %}
 
-            <p>For: {{meal_detail.people}} People</p>
-            <p>Preparation Time: {{meal_detail.preparation_time}} Minutes</p>
-            <p>Price: ${{meal_detail.price}}</p>
-
-            </div>
+<!-- Cover image under the navbar Start -->
+<div class="cover_1">
+  <div class="img_bg" style="background-image: url({% static 'img/slider-1.jpg' %})" data-stellar-background-ratio="0.5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-12" data-aos="fade-up">
+          <h2 class="heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ipsa sint amet aliquam velit minima tenetur quisquam beatae molestiae possimus dicta.</h2>
         </div>
-        </div>
-    </div>    
-  <!-- Meal Details End -->
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Cover image under the navbar End -->  
+
+<!-- Meal Details Start -->
+  <div class="section">
+      <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-md-8" data-aos="fade-up">
+
+          <img src="{{ meal_detail.image.url }}" alt="{{ meal_detail.name }}" style="width: 100%; margin-left: auto; margin-right: auto; display: block;">
+          <h2 class="my-4">{{ meal_detail }}</h2>
+          <p>{{ meal_detail.description }}</p>
+
+          <p>For: {{meal_detail.people}} People</p>
+          <p>Preparation Time: {{meal_detail.preparation_time}} Minutes</p>
+          <p>Price: ${{meal_detail.price}}</p>
+
+          </div>
+      </div>
+      </div>
+  </div>    
+<!-- Meal Details End -->
 {% endblock %}
