--- a/src/blog/templates/post/post_detail.html
+++ b/src/blog/templates/post/post_detail.html
@@ -1,1 +1,217 @@
-<h2>Blog Details</h2>
+{% extends 'base.html' %}
+
+{% load static %}
+
+{% block content %}
+      
+    <div class="main-wrap">
+        <div class="cover_1 cover_sm">
+            <div class="img_bg" style="background-image: url({% static 'img/slider-1.jpg' %})" data-stellar-background-ratio="0.5">
+            <div class="container">
+                <div class="row align-items-center justify-content-center">
+                <div class="col-md-7 text-center" data-aos="fade-up">
+                    <h2 class="heading mb-4">Food that are best for your overall health</h2>
+
+                    <div class="post-info">
+                    <div class="date-info">February 18, 2017</div>
+                    <div class="category-info"><span class="seperator">|</span>In <a href="#" data-title="View all posts in Lifestyle" title="View all posts in Lifestyle">Lifestyle</a></div>
+                    <div class="author-info"><span class="seperator">|</span>By <a href="#">Charles Clark</a></div>
+                    </div>
+
+                </div>
+                </div>
+            </div>
+            </div>
+        </div> <!-- .cover_1 -->
+
+        <div class="section">
+            <div class="container">
+            
+            <div class="row">
+
+                <div class="col-md-8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
+                <p>Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
+                <h2 class="mb-3 mt-5">Best for your overall health</h2>
+                <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
+                <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
+                <p>Odit voluptatibus, eveniet vel nihil cum ullam dolores laborum, quo velit commodi rerum eum quidem pariatur! Quia fuga iste tenetur, ipsa vel nisi in dolorum consequatur, veritatis porro explicabo soluta commodi libero voluptatem similique id quidem? Blanditiis voluptates aperiam non magni. Reprehenderit nobis odit inventore, quia laboriosam harum excepturi ea.</p>
+                <p>Adipisci vero culpa, eius nobis soluta. Dolore, maxime ullam ipsam quidem, dolor distinctio similique asperiores voluptas enim, exercitationem ratione aut adipisci modi quod quibusdam iusto, voluptates beatae iure nemo itaque laborum. Consequuntur et pariatur totam fuga eligendi vero dolorum provident. Voluptatibus, veritatis. Beatae numquam nam ab voluptatibus culpa, tenetur recusandae!</p>
+                <p>Voluptas dolores dignissimos dolorum temporibus, autem aliquam ducimus at officia adipisci quasi nemo a perspiciatis provident magni laboriosam repudiandae iure iusto commodi debitis est blanditiis alias laborum sint dolore. Dolores, iure, reprehenderit. Error provident, pariatur cupiditate soluta doloremque aut ratione. Harum voluptates mollitia illo minus praesentium, rerum ipsa debitis, inventore?</p>
+                <div class="tag-widget post-tag-container mb-5 mt-5">
+                    <div class="tagcloud">
+                    <a href="#" class="tag-cloud-link">Life</a>
+                    <a href="#" class="tag-cloud-link">Sport</a>
+                    <a href="#" class="tag-cloud-link">Tech</a>
+                    <a href="#" class="tag-cloud-link">Travel</a>
+                    </div>
+                </div>
+
+
+                <div class="pt-5 mt-5">
+                    <h3 class="mb-5">6 Comments</h3>
+                    <ul class="comment-list">
+                    <li class="comment">
+                        <div class="vcard bio">
+                        <img src="img/person_1.jpg" alt="Image placeholder">
+                        </div>
+                        <div class="comment-body">
+                        <h3>Jean Doe</h3>
+                        <div class="meta">January 9, 2018 at 2:21pm</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                        <p><a href="#" class="reply">Reply</a></p>
+                        </div>
+                    </li>
+
+                    <li class="comment">
+                        <div class="vcard bio">
+                        <img src="img/person_1.jpg" alt="Image placeholder">
+                        </div>
+                        <div class="comment-body">
+                        <h3>Jean Doe</h3>
+                        <div class="meta">January 9, 2018 at 2:21pm</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                        <p><a href="#" class="reply">Reply</a></p>
+                        </div>
+
+                        <ul class="children">
+                        <li class="comment">
+                            <div class="vcard bio">
+                            <img src="img/person_1.jpg" alt="Image placeholder">
+                            </div>
+                            <div class="comment-body">
+                            <h3>Jean Doe</h3>
+                            <div class="meta">January 9, 2018 at 2:21pm</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                            <p><a href="#" class="reply">Reply</a></p>
+                            </div>
+
+
+                            <ul class="children">
+                            <li class="comment">
+                                <div class="vcard bio">
+                                <img src="img/person_1.jpg" alt="Image placeholder">
+                                </div>
+                                <div class="comment-body">
+                                <h3>Jean Doe</h3>
+                                <div class="meta">January 9, 2018 at 2:21pm</div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                                <p><a href="#" class="reply">Reply</a></p>
+                                </div>
+
+                                <ul class="children">
+                                    <li class="comment">
+                                    <div class="vcard bio">
+                                        <img src="img/person_1.jpg" alt="Image placeholder">
+                                    </div>
+                                    <div class="comment-body">
+                                        <h3>Jean Doe</h3>
+                                        <div class="meta">January 9, 2018 at 2:21pm</div>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                                        <p><a href="#" class="reply">Reply</a></p>
+                                    </div>
+                                    </li>
+                                </ul>
+                            </li>
+                            </ul>
+                        </li>
+                        </ul>
+                    </li>
+
+                    <li class="comment">
+                        <div class="vcard bio">
+                        <img src="img/person_1.jpg" alt="Image placeholder">
+                        </div>
+                        <div class="comment-body">
+                        <h3>Jean Doe</h3>
+                        <div class="meta">January 9, 2018 at 2:21pm</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                        <p><a href="#" class="reply">Reply</a></p>
+                        </div>
+                    </li>
+                    </ul>
+                    <!-- END comment-list -->
+                    
+                    <div class="comment-form-wrap pt-5">
+                    <h3 class="mb-5">Leave a comment</h3>
+                    <form action="#" class="p-5 bg-light">
+                        <div class="form-group">
+                        <label for="name">Name *</label>
+                        <input type="text" class="form-control" id="name">
+                        </div>
+                        <div class="form-group">
+                        <label for="email">Email *</label>
+                        <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="form-group">
+                        <label for="website">Website</label>
+                        <input type="url" class="form-control" id="website">
+                        </div>
+
+                        <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
+                        </div>
+                        <div class="form-group">
+                        <input type="submit" value="Post Comment" class="btn btn-primary">
+                        </div>
+
+                    </form>
+                    </div>
+                </div>
+
+                </div> <!-- .col-md-8 -->
+                <div class="col-md-4 sidebar">
+                <div class="sidebar-box">
+                    <form action="#" class="search-form">
+                    <div class="form-group">
+                        <span class="icon fa fa-search"></span>
+                        <input type="text" class="form-control" placeholder="Type a keyword and hit enter">
+                    </div>
+                    </form>
+                </div>
+                <div class="sidebar-box">
+                    <div class="categories">
+                    <h3>Categories</h3>
+                    <li><a href="#">Courses <span>(12)</span></a></li>
+                    <li><a href="#">News <span>(22)</span></a></li>
+                    <li><a href="#">Design <span>(37)</span></a></li>
+                    <li><a href="#">HTML <span>(42)</span></a></li>
+                    <li><a href="#">Web Development <span>(14)</span></a></li>
+                    </div>
+                </div>
+                <div class="sidebar-box">
+                    <img src="img/person_1.jpg" alt="Image placeholder" class="img-fluid mb-4">
+                    <h3>About The Author</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+                    <p><a href="#" class="btn btn-primary btn-sm">Read More</a></p>
+                </div>
+
+                <div class="sidebar-box">
+                    <h3>Tag Cloud</h3>
+                    <div class="tagcloud">
+                    <a href="#" class="tag-cloud-link">Life</a>
+                    <a href="#" class="tag-cloud-link">Sport</a>
+                    <a href="#" class="tag-cloud-link">Tech</a>
+                    <a href="#" class="tag-cloud-link">Travel</a>
+                    <a href="#" class="tag-cloud-link">Life</a>
+                    <a href="#" class="tag-cloud-link">Sport</a>
+                    <a href="#" class="tag-cloud-link">Tech</a>
+                    <a href="#" class="tag-cloud-link">Travel</a>
+                    </div>
+                </div>
+
+                <div class="sidebar-box">
+                    <h3>Paragraph</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+                </div>
+                </div>
+
+            </div>
+
+            
+            </div>
+        </div> <!-- .section -->
+    
+    </div> <!-- .main-wrap -->
+{% endblock %} 
