--- a/src/blog/templates/post/post_list.html
+++ b/src/blog/templates/post/post_list.html
@@ -30,15 +30,15 @@
                         <a href="blog-single.html"><img src="img/news_2.jpg" alt="Image placeholder" class="img-fluid"></a>
                         </figure>
                         <div class="media-body">
-                        <h3><a href="blog-single.html">Food that are best for your overall health</a></h3>
+                        <h3><a href="{% url 'blog:post_detail' post.id %}">{{ post }}</a></h3>
                         <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-                        <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
+                        <p class="mb-4">{{ post.content }}</p>
+                        <p><a href="{% url 'blog:post_detail' post.id %}" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
                         </div>
                     </div> <!-- .media -->
                 </div>
                 {% endfor %}
-                
+
             </div>
 
             <div class="row">
