--- a/src/blog/templates/post/post_detail.html
+++ b/src/blog/templates/post/post_detail.html
@@ -110,11 +110,9 @@
                 <div class="sidebar-box">
                     <div class="categories">
                     <h3>Categories</h3>
-                    <li><a href="#">Courses <span>(12)</span></a></li>
-                    <li><a href="#">News <span>(22)</span></a></li>
-                    <li><a href="#">Design <span>(37)</span></a></li>
-                    <li><a href="#">HTML <span>(42)</span></a></li>
-                    <li><a href="#">Web Development <span>(14)</span></a></li>
+                    {% for cat in categories %}
+                    <li><a href="#">{{ cat }}</a></li>
+                    {% endfor %}
                     </div>
                 </div>
 
