--- a/src/blog/templates/post/post_detail.html
+++ b/src/blog/templates/post/post_detail.html
@@ -34,10 +34,9 @@
                 
                 <div class="tag-widget post-tag-container mb-5 mt-5">
                     <div class="tagcloud">
-                    <a href="#" class="tag-cloud-link">Life</a>
-                    <a href="#" class="tag-cloud-link">Sport</a>
-                    <a href="#" class="tag-cloud-link">Tech</a>
-                    <a href="#" class="tag-cloud-link">Travel</a>
+                    {% for tag in post_detail.tags.all %}
+                        <a href="#" class="tag-cloud-link">{{ tag }}</a>
+                    {% endfor %}
                     </div>
                 </div>
 
@@ -111,7 +110,7 @@
                     <div class="categories">
                     <h3>Categories</h3>
                     {% for cat in categories %}
-                    <li><a href="#">{{ cat }}</a></li>
+                        <li><a href="#">{{ cat }}</a></li>
                     {% endfor %}
                     </div>
                 </div>
