--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -127,9 +127,9 @@
       <div class="container">
         <div class="row">
 
-            <p class="footer-text col-md-12"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://github.com/IamOmaR22" target="_blank">Md. Omar Faruk</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+          <p class="footer-text col-md-12">
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://github.com/IamOmaR22" target="_blank">Md. Omar Faruk</a>
+         </p>
         </div>
       </div>
     </div>
