Show all the comments

--- a/src/blog/templates/post/post_detail.html
+++ b/src/blog/templates/post/post_detail.html
@@ -42,29 +42,22 @@
 
 
                 <div class="pt-5 mt-5">
-                    <h3 class="mb-5">6 Comments</h3>
+                    <h3 class="mb-5"> Comments</h3>
                     <ul class="comment-list">
-                    <li class="comment">
-                        <div class="vcard bio">
-                        <img src="img/person_1.jpg" alt="Image placeholder">
-                        </div>
-                        <div class="comment-body">
-                        <h3>Jean Doe</h3>
-                        <div class="meta">January 9, 2018 at 2:21pm</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                        </div>
-                    </li>
+                    
+                    {% for comment in comments %}
+                        <li class="comment">
+                            <div class="vcard bio">
+                            <img src="img/person_1.jpg" alt="Image placeholder">
+                            </div>
+                            <div class="comment-body">
+                            <h3>{{ comment.user }}</h3>
+                            <div class="meta">{{ comment.created }}</div>
+                            <p>{{ comment.content }}</p>
+                            </div>
+                        </li>
+                    {% endfor %}
 
-                    <li class="comment">
-                        <div class="vcard bio">
-                        <img src="img/person_1.jpg" alt="Image placeholder">
-                        </div>
-                        <div class="comment-body">
-                        <h3>Jean Doe</h3>
-                        <div class="meta">January 9, 2018 at 2:21pm</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                        </div>
-                    </li>
                     </ul>
                     <!-- END comment-list -->
                     
@@ -133,4 +126,4 @@
         </div> <!-- .section -->
     
     </div> <!-- .main-wrap -->
-{% endblock %} 
+{% endblock %}
