--- a/src/blog/templates/post/post_list.html
+++ b/src/blog/templates/post/post_list.html
@@ -3,58 +3,90 @@
 {% load static %}
 
 {% block content %}
-      
+
 <div class="main-wrap">
     <div class="cover_1 cover_sm">
-        <div class="img_bg" style="background-image: url({% static 'img/slider-1.jpg' %})" data-stellar-background-ratio="0.5">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-            <div class="col-md-7" data-aos="fade-up">
-                <h2 class="heading">Blog Grid</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo saepe dolorum dolorem, iste officia voluptates! Sint repudiandae, soluta voluptatem delectus iure, eaque, harum expedita, nisi aliquam magni odio perferendis ipsum!</p>
+        <div class="img_bg" style="background-image: url({% static 'img/slider-1.jpg' %})"
+            data-stellar-background-ratio="0.5">
+            <div class="container">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-md-7" data-aos="fade-up">
+                        <h2 class="heading">Blog Grid</h2>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo saepe dolorum
+                            dolorem, iste officia voluptates! Sint repudiandae, soluta voluptatem delectus iure, eaque,
+                            harum expedita, nisi aliquam magni odio perferendis ipsum!</p>
+                    </div>
+                </div>
             </div>
-            </div>
-        </div>
         </div>
     </div> <!-- .cover_1 -->
 
     <div class="section">
         <div class="container">
-        
-        <div class="row mb-5">
-        
-            {% for post in post_list %}
-            <div class="col-md-4">
-                <div class="media d-block media-bg-white mb-5" data-aos="fade-up"  data-aos-delay="400">
-                    <figure>
-                    <a href="{% url 'blog:post_detail' post.id %}"><img src="{{ post.image.url }}" alt="Image placeholder" class="img-fluid"></a>
-                    </figure>
-                    <div class="media-body">
-                    <h3><a href="{% url 'blog:post_detail' post.id %}">{{ post }}</a></h3>
-                    <p class="post-meta"><span><span class="fa fa-calendar"></span> {{ post.created }}</span></p>
-                    <p class="mb-4">{{ post.content }}</p>
-                    <p><a href="{% url 'blog:post_detail' post.id %}" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-                    </div>
-                </div> <!-- .media -->
-            </div>
-            {% endfor %}
 
-        </div>
+            <div class="row mb-5">
 
-        <div class="row">
-            <div class="col-md-12">
-            <ul class="pagination custom-pagination">
-                <li class="page-item prev"><a class="page-link" href="#"><i class="fa fa-angle-left"></i></a></li>
-                <li class="page-item active"><a class="page-linkx href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item next"><a class="page-link" href="#"><i class="fa fa-angle-right"></i></a></li>
-            </ul>
+                {% for post in post_list %}
+                <div class="col-md-4">
+                    <div class="media d-block media-bg-white mb-5" data-aos="fade-up" data-aos-delay="400">
+                        <figure>
+                            <a href="{% url 'blog:post_detail' post.id %}"><img src="{{ post.image.url }}"
+                                    alt="Image placeholder" class="img-fluid"></a>
+                        </figure>
+                        <div class="media-body">
+                            <h3><a href="{% url 'blog:post_detail' post.id %}">{{ post }}</a></h3>
+                            <p class="post-meta"><span><span class="fa fa-calendar"></span> {{ post.created }}</span>
+                            </p>
+                            <p class="mb-4">{{ post.content }}</p>
+                            <p><a href="{% url 'blog:post_detail' post.id %}"
+                                    class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
+                        </div>
+                    </div> <!-- .media -->
+                </div>
+                {% endfor %}
 
             </div>
-        </div>
+
+        <!-- Pagination Starts -->
+            <div class="row">
+                {% if post_list.has_other_pages %}
+
+                <div class="col-md-12">
+                    <ul class="pagination custom-pagination">
+                        {% if post_list.has_previous %}
+                        <li class="page-item prev"><a class="page-link"
+                                href="?page={{post_list.previous_page_number}}"><i class="fa fa-angle-left"></i></a>
+                        </li>
+                        {% else %}
+                        <li class="disabled"></li>
+                        {% endif %}
+
+                        {% for pages in post_list.paginator.page_range %}
+                        {% if post_list.number == pages %}
+                        <li class="page-item active"><a class="page-linkx href=" #">{{pages}}</a></li>
+                        {% else %}
+                        <li class="page-item active"><a class="page-linkx" href="?page={{pages}}">{{pages}}</a></li>
+                        {% endif %}
+
+                        {% endfor %}
+
+
+                        {% if post_list.has_next %}
+                        <li class="page-item next"><a class="page-link" href="?page={{post_list.next_page_number}}"><i
+                                    class="fa fa-angle-right"></i></a></li>
+                        {% else %}
+                        <li class="disabled"></li>
+                        {% endif %}
+                    </ul>
+
+
+                </div>
+                {% endif %}
+            </div>
+        <!-- Pagination End -->    
+
         </div>
     </div> <!-- .section -->
 
 </div> <!-- .main-wrap -->
-{% endblock %} 
+{% endblock %}
