--- a/src/blog/templates/post/post_detail.html
+++ b/src/blog/templates/post/post_detail.html
@@ -74,14 +74,16 @@
 
                 </div> <!-- .col-md-8 -->
                 <div class="col-md-4 sidebar">
+
                 <div class="sidebar-box">
-                    <form action="#" class="search-form">
+                    <form action="#" method="GET" class="search-form">
                     <div class="form-group">
                         <span class="icon fa fa-search"></span>
-                        <input type="text" class="form-control" placeholder="Type a keyword and hit enter">
+                        <input type="text" class="form-control" name="q" value="{{request.Get.q}}" placeholder="Type a keyword and hit enter">
                     </div>
                     </form>
                 </div>
+
                 <div class="sidebar-box">
                     <div class="categories">
                         <h3>Categories</h3>
