--- a/src/contact/templates/contact/contact.html
+++ b/src/contact/templates/contact/contact.html
@@ -36,7 +36,7 @@
 
             {% csrf_token %}
             {{ form }}
-            <button type="submit" classs="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
 
           </form>
         </div>
