--- a/src/home/templates/home/index.html
+++ b/src/home/templates/home/index.html
@@ -140,7 +140,7 @@
               <div class="d-block d-md-flex menu-food-item">
                 <div class="text order-1 mb-3">
                   <h3><a href="{% url 'meals:meal_detail' meal.slug %}">{{ meal.name }}</a></h3>
-                  <p>{{ meal.description }}</p>
+                  <p>{{ meal.description|truncatewords:50 }}</p>
                 </div>
                 <div class="price order-2">
                   <strong>${{ meal.price }}</strong>
