--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -35,12 +35,12 @@
     <nav class="site-menu">
       <div class="site-menu-inner">
         <ul class="list-unstyled">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="menu.html">Our Menu</a></li>
-          <li><a href="blog.html">Our Blog</a></li>
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="{% url 'aboutus:aboutus_list' %}">About Us</a></li>
+          <!-- <li><a href="menu.html">Our Menu</a></li> -->
+          <li><a href="{% url 'blog:post_list' %}">Our Blog</a></li>
           <li><a href="{% url 'reservation:reserve_table' %}">Reserve A Table</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="{% url 'contact:send_email' %}">Contact</a></li>
         </ul>
       </div>
     </nav>
