--- a/src/contact/templates/contact/contact.html
+++ b/src/contact/templates/contact/contact.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% load bootstrap4 %}
+
 {% block content %}
 
 <div class="main-wrap">
@@ -35,8 +37,10 @@
           <form action="#" method="POST">
 
             {% csrf_token %}
-            {{ form }}
-            <button type="submit" class="btn btn-primary">Submit</button>
+            {% bootstrap_form form %}
+            {% buttons %}
+                <button type="submit" class="btn btn-primary">Send Message</button>
+            {% endbuttons %}
 
           </form>
         </div>
